--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "node-cron": "^3.0.3",
-    "puppeteer": "^20.7.4",
-    "puppeteer-core": "^10.1.0"
+    "puppeteer": "^20.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
